Adicionando e finalizando o index.html

--- a/index.html
+++ b/index.html
@@ -1,39 +1,20 @@
+<!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mentalista - Aula03</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css">
+    <title>Clima</title>
 </head>
-
 <body>
-  <header>
-    <div class="container">
-      <h1 class="page__title">
-        Mentalista
-      </h1>
-      <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-mentalista.svg" class="page__logo" alt="Logo imersão dev Alura">
-    </div>
-    <div class="logo">
-      <a href="https://alura.com.br/" target="_blank">
-        <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="Logo Alura" class="alura__logo">
-      </a>
-    </div>
-  </header>
-  <main>
-    <p class="page__subtitle">Digite um número de 0 a 10:</p>
-    <div class="container">
-      <input type="number" id="valor">
-      <button class="submit" type="sumbit" onclick="calcula()">Chutar</button>
-    </div>
-    <h2 class="resultado"></h2>
-  </main>
-  <footer>Desenvolvido por Marcus Urani</footer>
+    <form id="form">
+        <input type = "text" id = "buscar" placeholder="Pesquise por local" autocomplete="off">
+    </form>
+    <main id="main">
+
+        
+    </main>
 </body>
-<script src="index.js"></script>
 </html>
