--- a/index.html
+++ b/index.html
@@ -1,20 +1,17 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="reset.css">
-    <title>Clima</title>
-</head>
-<body>
-    <form id="form">
-        <input type = "text" id = "buscar" placeholder="Pesquise por local" autocomplete="off">
-    </form>
-    <main id="main">
-
-        
-    </main>
-</body>
-</html>
+<!DOCTYPE html>  
+ <html lang="en">  
+ <head>  
+   <meta charset="UTF-8">  
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">  
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+   <title>Weather App</title>  
+   <link rel="stylesheet" href="style.css">  
+ </head>  
+ <body>  
+  <form id="form"><input type="text" id="search" placeholder="Search By Loaction" autocomplete="off">  
+ </form>  
+ <main id="main">  
+ </main>  
+   <script src="index.js"></script>  
+ </body>  
+ </html>  
