--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <link rel="stylesheet" href="style.css">  
  </head>  
  <body>  
-  <form id="form"><input type="text" id="search" placeholder="Search By Loaction" autocomplete="off">  
+  <form id="form"><input type="text" id="search" placeholder="Procurar Por Local" autocomplete="off">  
  </form>  
  <main id="main">  
  </main>  
