--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
    <meta charset="UTF-8">  
    <meta http-equiv="X-UA-Compatible" content="IE=edge">  
    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-   <title>Weather App</title>  
+   <title>Weather App</title>
    <link rel="stylesheet" href="style.css">  
  </head>  
  <body>  
   <form id="form"><input type="text" id="search" placeholder="Procurar Por Local" autocomplete="off">  
  </form>  
  <main id="main">  
- </main>  
+ </main>
+ <footer class="footer">
+  <p class="footer__text">Desenvolvido por <a href="https://github.com/MarcusUrani" target="_blank" class="footer__link">MarcusUrani</a></p>
+ </footer>  
    <script src="index.js"></script>  
  </body>  
  </html>  
